signup logic, logout bug fixes, routing bugfixes

--- a/layouts/partials/account.html
+++ b/layouts/partials/account.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="header2">
-        <a class="logout" ng-click="logout()">Logout</a><br>
+        <a class="logout" href="" ng-click="logout()">Logout</a><br>
     </div>
 
 </div> 
