--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,9 +6,9 @@
             <div>
             <img class="footerLogo" src={{ "/img/vlogo.png" | relURL }}><br>  
             </div>
-            <!-- Netlify Widget
-            <div data-netlify-identity-menu></div>
-            -->
+            <div>
+                <a class="footerLink" href="/signin">SignUp / LogIn</a>
+            </div>
             <a class="footerLink" href="/frequently-asked-questions">| FAQ + CONTACT |</a>
             <div class="divider">
                 <div class="social-footer">
