Temporarily commented out the Signup link in footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
             <img class="footerLogo" src={{ "/img/vlogo.png" | relURL }}><br>  
             </div>
             <div>
-                <a class="footerLink" href="/signin">SignUp / LogIn</a>
+                <!-- <a class="footerLink" href="/signin">SignUp / LogIn</a> -->
             </div>
             <a class="footerLink" href="/frequently-asked-questions">| FAQ + CONTACT |</a>
             <div class="divider">
