add email field population after signup

--- a/layouts/partials/account.html
+++ b/layouts/partials/account.html
@@ -23,7 +23,7 @@
             <p>Name</p>
             <input type="text" placeholder="Jane Doe" required class="input" ng-model="user.name">
             <p>Email</p>
-            <input type="text" placeholder="example@email.com" required class="input" ng-model="user.email">
+            <input type="text" placeholder="example@email.com" required class="input" ng-model="auth.email">
         </ng-form>
 
     </div>
