Changes and fixes to account and signin pages
Added layout to signin page to match homepage asthetic.
Fixed account page mobile layout breaking.
Updated form fileds in account page.
Update Cancel/Update buttons in account page for a more modern asthetic.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,8 @@
-{{ if eq $.Params.title "Thank You, You're Confirmed in the Vibe Beta" }}
-    {{ partial "head2.html" . }}
-{{ else }}
-    {{ partial "head.html" . }}
-{{ end }}
+{{ partial "head.html" . }}
 
 {{ if eq $.Params.title "" }}
     {{ partial "account.html" . }}
-{{ else if eq $.Params.title "Welcome to My Awesome App" }}
+{{ else if eq $.Params.title "Firebase App" }}
     {{ partial "signin.html" . }}
 {{ else }}
     {{ partial "header.html" . }}
