--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,17 +10,109 @@
 
 	<title>Vibe LTD - Chocolate, Coffee, and Cannabis Monthly Subscription</title>
 
-	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacy.css" | relURL }}{{ else }}{{ "/css/cssv.css" | relURL }}{{ end }} />
-	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacyr.css" | relURL }}{{ else }}{{ "/css/cssvr.css" | relURL }}{{ end }} />
+	<!-- Normalize -->
+	<link rel="stylesheet" href={{ "/css/normalize.css" | relURL }} />
 
+	<!-- JQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
+	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300, 600, 700" rel="stylesheet">
 
+	<!-- Favicon -->
 	<link rel="icon" type="image/png" sizes="16x16" src={{ "/img/favicon-16x16.png" | relURL }}>
 
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+	<!-- Conditional Logic for Lead Pixels (FB, Pintrest, Taboola) [Only loads in Thank You Confirmation Page] -->
+	{{ if eq $.Params.title "Thank You, You're Confirmed in the Vibe Beta" }}
+		
+		<!-- Facebook Pixel Code -->
+		<script>
+            ! function (f, b, e, v, n, t, s) {
+                if (f.fbq) return;
+                n = f.fbq = function () {
+                    n.callMethod ?
+                        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                };
+                if (!f._fbq) f._fbq = n;
+                n.push = n;
+                n.loaded = !0;
+                n.version = '2.0';
+                n.queue = [];
+                t = b.createElement(e);
+                t.async = !0;
+                t.src = v;
+                s = b.getElementsByTagName(e)[0];
+                s.parentNode.insertBefore(t, s)
+            }(window,
+                document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '365893380475713'); // Insert your pixel ID here.
+            fbq('track', 'PageView');
+            fbq('track', 'Lead');
+        </script>
+    
+        <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=365893380475713&ev=PageView&noscript=1"
+            /></noscript>
+        <!-- DO NOT MODIFY -->
+        <!-- End Facebook Pixel Code -->
+
+		<!-- Start Taboola -->
+		<script type="text/javascript">
+			window._tfa = window._tfa || [];
+			_tfa.push({
+				notify: 'action',
+				name: 'SignUp'
+			});
+		</script>
+		<script src="//cdn.taboola.com/libtrc/taboolaaccount-hlvibeltdco/tfa.js"></script>
+		<!-- End Taboola -->
+
+		<!-- Start Pintrest Pixel -->
+		<script type="text/javascript">
+			! function (e) {
+				if (!window.pintrk) {
+					window.pintrk = function () {
+						window.pintrk.queue.push(Array.prototype.slice.call(arguments))
+					};
+					var n = window.pintrk;
+					n.queue = [], n.version = "3.0";
+					var t = document.createElement("script");
+					t.async = !0, t.src = e;
+					var r = document.getElementsByTagName("script")[0];
+					r.parentNode.insertBefore(t, r)
+				}
+			}("https://s.pinimg.com/ct/core.js");
+
+			pintrk('load', '2617160657516');
+			pintrk('page');
+		</script>
+
+		<noscript>
+			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&noscript=1" />
+		</noscript>
+
+		<script>
+			pintrk('track', 'pagevisit');
+		</script>
+
+		<noscript>
+			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=pagevisit&noscript=1"
+			/>
+		</noscript>
+
+		<script>
+			pintrk('track', 'signup');
+		</script>
+			
+		<noscript>
+			<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=signup&noscript=1"/>
+		</noscript>
+		<!-- End Pintrest Pixel -->
+	{{ else }}
+	{{ end }}
+	<!-- Conditional Logic for Lead Pixels -->
 
 	<script>
 		$(document).ready(function() {
@@ -73,33 +165,7 @@
 		});
 	</script>
 
-	<script type="text/javascript">
-		! function(e) {
-			if (!window.pintrk) {
-				window.pintrk = function() {
-					window.pintrk.queue.push(Array.prototype.slice.call(arguments))
-				};
-				var n = window.pintrk;
-				n.queue = [], n.version = "3.0";
-				var t = document.createElement("script");
-				t.async = !0, t.src = e;
-				var r = document.getElementsByTagName("script")[0];
-				r.parentNode.insertBefore(t, r)
-			}
-		}("https://s.pinimg.com/ct/core.js");
-
-		pintrk('load', '2617160657516');
-		pintrk('page');
-	</script>
-
-	<noscript>
-		<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&noscript=1" />
-	</noscript>
-
-	<script>
-		pintrk('track', 'pagevisit');
-	</script>
-
+	<!-- Start Firebase App -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js" type="text/javascript"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js" type="text/javascript"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js" type="text/javascript"></script>
@@ -119,11 +185,11 @@
 	<script src="/js/app.js" type="text/javascript"></script>
 	<script src="/js/user.svc.js" type="text/javascript"></script>
 	<script src="/js/account.ctrl.js" type="text/javascript"></script>
+	<!-- End Firebase App -->
 
-	<noscript>
-		<img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2617160657516&event=pagevisit&noscript=1"
-		/>
-	</noscript>
+	<!-- Conditional Logic applied to load different CSS for Privacy Page ONLY -->
+	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacy.css" | relURL }}{{ else }}{{ "/css/cssv.css" | relURL }}{{ end }} />
+	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacyr.css" | relURL }}{{ else }}{{ "/css/cssvr.css" | relURL }}{{ end }} />
 
 </head>
 
