--- a/layouts/partials/signin.html
+++ b/layouts/partials/signin.html
@@ -7,9 +7,9 @@
         signInSuccessUrl: '/account',
         signInOptions: [
             // Leave the lines as is for the providers you want to offer your users.
-            firebase.auth.GoogleAuthProvider.PROVIDER_ID,
             firebase.auth.FacebookAuthProvider.PROVIDER_ID,
-            firebase.auth.EmailAuthProvider.PROVIDER_ID
+            firebase.auth.EmailAuthProvider.PROVIDER_ID,
+            firebase.auth.GoogleAuthProvider.PROVIDER_ID
         ],
         // Terms of service url.
         tosUrl: '<your-tos-url>'
@@ -21,8 +21,11 @@
     ui.start('#firebaseui-auth-container', uiConfig);
 </script>
 
+<div class="authHead">
+    {{ partial "header.html" . }}
+</div>
 
-{{ partial "header.html" . }}
-
-<div id="firebaseui-auth-container"></div>
+<div id="firebaseui-auth-container">
+    <h1 class="firebaseui-auth-header">Login to Manage Your Vibe Subscription</h1>
+</div>
 	
