--- a/static/css/cssv.css
+++ b/static/css/cssv.css
@@ -383,7 +383,7 @@ body {
     height: 100px;
 }
 
-.netlify-identity-menu {
+/* .netlify-identity-menu {
     display: flex;
     justify-content: center;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -414,7 +414,7 @@ body {
     color: black;
     margin: 0;
     margin-left: 2px;
-}
+} */
 
 .divider {
     display: inline;
@@ -862,6 +862,38 @@ animation-delay: 8s;
 }
 }  */
 
+
+/* Start SingIn Page Layout */
+.authHead {
+    background-color: #f2f2f2;
+    background-repeat: repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    height: 34vh;
+    width: 100vw;
+    text-align: center;
+    vertical-align: middle;
+    background-image: url(/img/vherobg.jpg);
+    background-size: cover;
+}
+
+.firebaseui-auth-header {
+    font-family: 'Open Sans Condensed', sans-serif;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: #000;
+    margin: 0 auto 40px;
+}
+
+#firebaseui-auth-container {
+    margin: 10% auto;
+}
+/* End SignIn Page Layout */
+
+
+/* Start Account Page Layout */
 .headerAccount {
     padding: 0 10%;
     margin: 20px auto 0;
@@ -906,6 +938,7 @@ animation-delay: 8s;
 
 .input {
     font-size: 14px;
+    font-weight: 200;
     padding-bottom: 5px;
     border: none;
     border-bottom: 1px solid #E0E0E0;
@@ -1010,8 +1043,15 @@ form p {
 
 .ship span {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
+}
+
+.ship span div {
+    display: flex; 
+    flex-basis: calc(50% - 0px);  
     justify-content: space-between;
+    flex-direction: column;
 }
 
 .bill {
@@ -1029,6 +1069,7 @@ form p {
 }
 
 .bill span {
+    min-height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -1056,14 +1097,26 @@ form p {
 
 .subOptions {
     margin: 60px 0 30px;
+    padding: 0;
+    text-decoration: none;
     display: grid;
-    grid-template-columns: 0.5fr 0.5fr 1fr;
+    grid-template-columns: 0.5fr 0.5fr;
     grid-column-gap: 60px;
+    list-style: none;
+    overflow: auto;
 }
+
+/* .subOptions li{
+    display: block;
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 100px;
+    border-bottom: 1px solid #333;
+  } */
 
 .subButton {
     border: none;
-    border: 1px solid #E0E0E0;
     background: none;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
@@ -1073,9 +1126,73 @@ form p {
     padding: 10px 20px;
 }
 
+/* .subOptions  li input[type=radio]{
+    position: absolute;
+    visibility: hidden;
+}
+
+.subOptions  li label{
+    display: block;
+    position: relative;
+    font-weight: 300;
+    font-size: 1.35em;
+    padding: 25px 25px 25px 80px;
+    margin: 10px auto;
+    height: 30px;
+    z-index: 9;
+    cursor: pointer;
+    -webkit-transition: all 0.25s linear;
+  }
+  
+  .subOptions  li:hover label{
+      color: #FFFFFF;
+  }
+  
+  .subOptions  li .check{
+    display: block;
+    position: absolute;
+    border: 5px solid #AAAAAA;
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    top: 30px;
+    left: 20px;
+      z-index: 5;
+      transition: border .25s linear;
+      -webkit-transition: border .25s linear;
+  }
+  
+  .subOptions  li:hover .check {
+    border: 5px solid #FFFFFF;
+  }
+  
+  .subOptions  li .check::before {
+    display: block;
+    position: absolute;
+      content: '';
+    border-radius: 100%;
+    height: 15px;
+    width: 15px;
+    top: 5px;
+      left: 5px;
+    margin: auto;
+      transition: background 0.25s linear;
+      -webkit-transition: background 0.25s linear;
+  }
+  
+  input[type=radio]:checked ~ .check {
+    border: 5px solid #0DFF92;
+  }
+  
+  input[type=radio]:checked ~ .check::before{
+    background: #0DFF92;
+  }
+  
+  input[type=radio]:checked ~ label{
+    color: #0DFF92;
+  } */
+
 .update {
-    /* display: flex;
-    justify-content: flex-start; */
     display: grid;
     grid-template-columns: 0.5fr 0.5fr 2fr;
     grid-column-gap: 10px;
@@ -1084,6 +1201,28 @@ form p {
 .finalButton {
     margin: 0;
     padding: 15px 30px;
-    background: #404040;
+    background-color: #404040;
+	border-bottom: 5px solid #2B2A2A;
     color: #E0E0E0;
+    text-decoration: none;
+    outline: none;
 }
+
+.animate {
+	transition: all 0.1s;
+	-webkit-transition: all 0.1s;
+}
+
+.action-button {
+	padding: 10px 40px;
+    margin: 0px 10px 10px 0px;
+	border-radius: 10px;
+}
+
+.action-button:active {
+	transform: translate(0px,5px);
+    -webkit-transform: translate(0px,5px);
+	border-bottom: 1px solid;
+}
+
+/* End Account Page Layout */
