--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,7 @@
             <div>
                 <a href="/signin" class="footerLink" ng-if="!auth.uid">Signup / Login</a>
                 <a href="/account" class="footerLink" ng-if="auth.uid">My Account</a>
-                <a href="" class="footerLink" ng-click="logout()" ng-if="auth.uid">Logout</a>
+                <!-- <a href="" class="footerLink" ng-click="logout()" ng-if="auth.uid">Logout</a> -->
             </div>
             <a class="footerLink" href="/frequently-asked-questions">| FAQ + CONTACT |</a>
             <div class="divider">
