Fixed copyright showing insted of ampersand in account page

--- a/layouts/partials/account.html
+++ b/layouts/partials/account.html
@@ -21,7 +21,7 @@
 
         <ng-form class="accountForm">
             <p>Name</p>
-            <input type="text" placeholder="First &copy Last Name" required class="input" ng-model="user.name">
+            <input type="text" placeholder="First &amp Last Name" required class="input" ng-model="user.name">
             <p>Email</p>
             <input type="email" placeholder="example@email.com" required class="input" ng-model="auth.email">
             <p>Password</p>
@@ -32,7 +32,7 @@
 
     <div class="subscription">
         <div class="sidebar">
-            <h2>Subscription &copy Billing</h2>
+            <h2>Subscription &amp Billing</h2>
             <p>Manage your Vibe subscription and payment method.</p>
         </div>
 
@@ -93,7 +93,7 @@
                 <form class="pay" action="/" method="post">
                     <h4>Payment Method</h4>
                     <p>Full Name</p>
-                    <input type="text" placeholder="First &copy Last Name" required class="input">
+                    <input type="text" placeholder="First &amp Last Name" required class="input">
                     <p>Card Number</p>
                     <input type="number" placeholder="4012 8888 8888 1881" required class="input">
                     <span>
