Added new styles for subscription options buttons
Added new checkbox buttons for "active" and "pause"
Added *hidden* animation for sub buttons; "pause" only shows when "active" unchecked
Added option under "pause" for 1, 2, or 3 months
Added *hidden* animation for monthly options; only show when "pause" is selected
Added checkbox animation; red for "pause" and green for "active"

--- a/static/css/cssvr.css
+++ b/static/css/cssvr.css
@@ -548,9 +548,8 @@ margin-top:60px;
     }
 
     .update {
-        display: grid;
-        grid-template-columns: 0.5fr 0.5fr;
-        grid-column-gap: 10px;
+        display: flex;
+        justify-content: center;
     }
 
     .finalButton {
