--- a/layouts/partials/account.html
+++ b/layouts/partials/account.html
@@ -112,37 +112,27 @@
                     <p>Promo Code</p>
                     <input type="text" placeholder="Enter Promo Code" required class="input" ng-model="user.promoCode">
                 </ng-form>
-
-                <!-- <ul class="subOptions">
-                    <li>
-                        <input type="radio" class="subButton" name="selector" ng-if="!user.subscription" ng-click="user.subscription=true">
-                        <label class="left" for="subButton">Activate Subscription</label>
-                        <div class="check"></div>
-                    </li>
-                    <li>
-                        <input type="radio" class="subButton" name="selector" ng-if="user.subscription" ng-click="user.subscription=false">
-                        <label class="right" for="subButton">Pause Subscription</label>
-                        <div class="check"></div>
-                    </li>
-                </ul> -->
-
-                <div class="subOptions">
-                    <button class="subButton" ng-if="!user.subscription" ng-click="user.subscription=true">
-                        <p class="left">Activate Subscription</p>
-                    </button>
-
-                    <button class="subButton" ng-if="user.subscription" ng-click="user.subscription=false">
-                        <p class="right">Pause Subscription</p>
-                    </button>
-                </div>
-
+                
         </div>
 
     </div>
 
+    <div class="subOptions">
+        <label class="trigger">
+            <input type="checkbox" class="checkbox checkbox--green">Activate Subscription</input>
+            <span class="pause">
+                <input type="checkbox" class="checkbox checkbox--red">Pause Subscription</input>
+                <span class="msg">
+                    <input type="checkbox" class="checkbox checkbox--blue-grey month1"><p class="test">Pause for 1 month</p></input>
+                    <input type="checkbox" class="checkbox checkbox--blue-grey month2"><p class="test">Pause for 2 months</p></input>
+                    <input type="checkbox" class="checkbox checkbox--blue-grey month3"><p class="test">Pause for 3 months</p></input>
+                </span>
+            </span>
+        </label>
+    </div>
+
     <div class="update">
-        <button class="finalButton action-button animate" ng-click="cancel()">Cancel</button>
-        <button class="finalButton action-button animate" ng-click="save()">Update</button>
+        <button class="finalButton action-button animate" ng-click="save()">Save</button>
     </div>
 
 </div>
