--- a/static/css/cssv.css
+++ b/static/css/cssv.css
@@ -722,7 +722,7 @@ a.footerLink:hover {
 display:none;
 }
 
-/*
+
 .content-slider {
 width: 100%;
 height: 90px;
@@ -739,7 +739,7 @@ position: relative;
 .mask {
 overflow: hidden;
 height: 90px;
-borer: 1px solid red;
+border: 1px solid red;
 }
 
 .slider ul {
@@ -781,86 +781,86 @@ animation-delay: 4s;
 }
 
 .slider li.anim.cycle3 {
--webkit-animation-delay: 8s;
-animation-delay: 8s;
+    -webkit-animation-delay: 8s;
+    animation-delay: 8s;
 }
 
 @-moz-keyframes cycle {
-0% {
-    top: -50px;
-    opacity: 0;
-}
-16% {
-    top: -50px;
-    opacity: 0;
-}
-20% {
-    top: 0px;
-    opacity: 1;
-}
-24% {
-    top: 0px;
-    opacity: 1;
-}
-36% {
-    top: 0px;
-    opacity: 1;
-    z-index: 0;
-}
-40% {
-    top: 50px;
-    opacity: 0;
-    z-index: 0;
-}
-41% {
-    top: -50px;
-    opacity: 0;
-    z-index: -1;
-}
-100% {
-    top: -50px;
-    opacity: 0;
-    z-index: -1;
-}
+    0% {
+        top: -50px;
+        opacity: 0;
+    }
+    16% {
+        top: -50px;
+        opacity: 0;
+    }
+    20% {
+        top: 0px;
+        opacity: 1;
+    }
+    24% {
+        top: 0px;
+        opacity: 1;
+    }
+    36% {
+        top: 0px;
+        opacity: 1;
+        z-index: 0;
+    }
+    40% {
+        top: 50px;
+        opacity: 0;
+        z-index: 0;
+    }
+    41% {
+        top: -50px;
+        opacity: 0;
+        z-index: -1;
+    }
+    100% {
+        top: -50px;
+        opacity: 0;
+        z-index: -1;
+    }
 }
 @-webkit-keyframes cycle {
-0% {
-    top: -50pxx;
-    opacity: 0;
-}
-16% {
-    top: -50pxx;
-    opacity: 0;
-}
-20% {
-    top: 0px;
-    opacity: 1;
-}
-24% {
-    top: 0px;
-    opacity: 1;
-}
-36% {
-    top: 0px;
-    opacity: 1;
-    z-index: 0;
-}
-40% {
-    top: 50px;
-    opacity: 0;
-    z-index: 0;
-}
-41% {
-    top: -50px;
-    opacity: 0;
-    z-index: -1;
-}
-100% {
-    top: -50px;
-    opacity: 0;
-    z-index: -1;
-}
-}  */
+    0% {
+        top: -50pxx;
+        opacity: 0;
+    }
+    16% {
+        top: -50pxx;
+        opacity: 0;
+    }
+    20% {
+        top: 0px;
+        opacity: 1;
+    }
+    24% {
+        top: 0px;
+        opacity: 1;
+    }
+    36% {
+        top: 0px;
+        opacity: 1;
+        z-index: 0;
+    }
+    40% {
+        top: 50px;
+        opacity: 0;
+        z-index: 0;
+    }
+    41% {
+        top: -50px;
+        opacity: 0;
+        z-index: -1;
+    }
+    100% {
+        top: -50px;
+        opacity: 0;
+        z-index: -1;
+    }
+} 
 
 
 /* Start SingIn Page Layout */
@@ -994,7 +994,7 @@ form p {
 }
 
 .subscription {
-    margin: 60px auto 60px;
+    margin: 60px auto 0;
     display: grid;
     grid-template-columns: 0.5fr 1fr;
     grid-column-gap: 40px;
@@ -1096,24 +1096,8 @@ form p {
 }
 
 .subOptions {
-    margin: 60px 0 30px;
-    padding: 0;
-    text-decoration: none;
-    display: grid;
-    grid-template-columns: 0.5fr 0.5fr;
-    grid-column-gap: 60px;
-    list-style: none;
-    overflow: auto;
+    margin: 0 0 60px 350px ;
 }
-
-/* .subOptions li{
-    display: block;
-    position: relative;
-    float: left;
-    width: 100%;
-    height: 100px;
-    border-bottom: 1px solid #333;
-  } */
 
 .subButton {
     border: none;
@@ -1126,83 +1110,18 @@ form p {
     padding: 10px 20px;
 }
 
-/* .subOptions  li input[type=radio]{
-    position: absolute;
-    visibility: hidden;
-}
-
-.subOptions  li label{
-    display: block;
-    position: relative;
-    font-weight: 300;
-    font-size: 1.35em;
-    padding: 25px 25px 25px 80px;
-    margin: 10px auto;
-    height: 30px;
-    z-index: 9;
-    cursor: pointer;
-    -webkit-transition: all 0.25s linear;
-  }
-  
-  .subOptions  li:hover label{
-      color: #FFFFFF;
-  }
-  
-  .subOptions  li .check{
-    display: block;
-    position: absolute;
-    border: 5px solid #AAAAAA;
-    border-radius: 100%;
-    height: 25px;
-    width: 25px;
-    top: 30px;
-    left: 20px;
-      z-index: 5;
-      transition: border .25s linear;
-      -webkit-transition: border .25s linear;
-  }
-  
-  .subOptions  li:hover .check {
-    border: 5px solid #FFFFFF;
-  }
-  
-  .subOptions  li .check::before {
-    display: block;
-    position: absolute;
-      content: '';
-    border-radius: 100%;
-    height: 15px;
-    width: 15px;
-    top: 5px;
-      left: 5px;
-    margin: auto;
-      transition: background 0.25s linear;
-      -webkit-transition: background 0.25s linear;
-  }
-  
-  input[type=radio]:checked ~ .check {
-    border: 5px solid #0DFF92;
-  }
-  
-  input[type=radio]:checked ~ .check::before{
-    background: #0DFF92;
-  }
-  
-  input[type=radio]:checked ~ label{
-    color: #0DFF92;
-  } */
-
 .update {
-    display: grid;
-    grid-template-columns: 0.5fr 0.5fr 2fr;
-    grid-column-gap: 10px;
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 100px;
 }
 
 .finalButton {
     margin: 0;
     padding: 15px 30px;
     background-color: #404040;
-	border-bottom: 5px solid #2B2A2A;
+    border-bottom: 3px solid #2B2A2A;
+    /* text-shadow: 0px -2px #2B2A2A; */
     color: #E0E0E0;
     text-decoration: none;
     outline: none;
@@ -1214,15 +1133,150 @@ form p {
 }
 
 .action-button {
-	padding: 10px 40px;
-    margin: 0px 10px 10px 0px;
+    margin: 0px 10px 10px 3px;
 	border-radius: 10px;
 }
 
 .action-button:active {
 	transform: translate(0px,5px);
     -webkit-transform: translate(0px,5px);
-	border-bottom: 1px solid;
+	border-bottom: 3px solid;
 }
 
 /* End Account Page Layout */
+
+
+/* End Pause/Activate Buttons */
+
+*:before, *:after {
+    box-sizing: inherit;
+    -webkit-font-smoothing: antialiased;
+}
+  
+.trigger input:focus {
+    box-shadow: none;
+    outline: 0;
+}
+
+.trigger input[type="text"] {
+    width: 400px;
+    padding: 8px 12px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+}
+  
+.trigger {
+    margin: 16px 0;
+    background: none;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    letter-spacing: 2px;
+    font-weight: 600;
+    line-height: 25px;
+}
+  
+  /* Code for checkboxes */
+.checkbox {
+    position: relative;
+    width: 1rem;
+    height: 1rem;
+    margin-right: .75rem;
+    cursor: pointer;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+    outline: 0;
+    vertical-align: middle;
+    /* 
+    Iterate over map and autogenerate helper classes. 
+    See "https://codepen.io/fxm90/pen/zGjjrJ" for an example 
+    */
+}
+
+.test {
+    display: inline-block;
+    max-width: 14%;
+}
+
+.month1, .month2, .month3 {
+    margin-bottom: 24px;
+}
+
+.month2, .month3 {
+    margin-left: 20px;
+}
+
+.checkbox:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    border: 2px solid #f2f2f2;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.checkbox:checked:before {
+    height: 50%;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    border-top-style: none;
+    border-right-style: none;
+}
+
+.checkbox--red {
+    margin-left: 20px;
+}
+
+.checkbox--red:checked:before {
+    border-color: #f44336;
+}
+
+.checkbox--green:checked:before {
+    border-color: #4caf50;
+}
+
+.checkbox--blue-grey:checked:before {
+    border-color: #607d8b;
+  }
+
+/* Triggers */
+.trigger input[type="checkbox"]:checked  + .pause {
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: visibility 0s linear 0.33s, opacity 0.33s linear;
+    transition: visibility 0s linear 0.33s, opacity 0.33s linear;
+}
+
+.trigger input[type="checkbox"] + .pause {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+}
+
+.trigger span input[type="checkbox"] + .msg {
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: visibility 0s linear 0.33s, opacity 0.33s linear;
+    transition: visibility 0s linear 0.33s, opacity 0.33s linear;
+}
+
+.trigger span input[type="checkbox"]:checked + .msg {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+}
+
+.msg {
+    display: block;
+    margin: 0 auto;
+    padding: 0 0 8px;
+    /* border: 1px solid #ddd; */
+    border-radius: 3px;
+}
+
+/* End Pause/Activate Buttons */
