Fixed mobile layout for sub options

--- a/layouts/partials/account.html
+++ b/layouts/partials/account.html
@@ -120,7 +120,8 @@
     <div class="subOptions">
         <label class="trigger">
             <input type="radio" name="subscription" value="active" checked="checked" class="radio radio--green active">Activate Subscription</input>
-            <input type="radio" name="subscription" value="paused" checked="checked" class="radio radio--red">Pause Subscription</input>
+            <div></div>
+            </br><input type="radio" name="subscription" value="paused" checked="checked" class="radio radio--red paused">Pause Subscription</input>
             <span class="msg">
                 <input type="radio" name="months" value="one" class="radio radio--blue-grey month1" ><p class="pause">Pause for 1 month</p></input>
                 <input type="radio" name="months" value="two" class="radio radio--blue-grey month2" ><p class="pause">Pause for 2 months</p></input>
