--- a/static/css/cssvr.css
+++ b/static/css/cssvr.css
@@ -487,7 +487,7 @@ margin-top:60px;
     }
 
     .subscription {
-        margin: 60px 10px 60px;
+        margin: 60px auto 0;
         display: flex;
         flex-direction: column;
     }
@@ -541,15 +541,13 @@ margin-top:60px;
     }
 
     .subOptions {
-        margin: 60px 0 30px;
-        display: grid;
-        grid-template-columns: 0.5fr 0.5fr;
-        grid-column-gap: 60px;
+        margin: 30px 0 60px;
     }
 
     .update {
         display: flex;
         justify-content: center;
+        margin-bottom: 100px;
     }
 
     .finalButton {
@@ -559,13 +557,6 @@ margin-top:60px;
         color: #E0E0E0;
     }
 
-    .subOptions {
-        margin: 20px 0;
-        display: grid;
-        grid-template-columns: 0.5fr 0.5fr;
-        grid-column-gap: 10px;
-    }
-
     .subButton {
         margin: 20px 0 0;
         font-size: 12px;
@@ -573,6 +564,31 @@ margin-top:60px;
         font-weight: 600;
         line-height: 20px;
         padding: 5px 10px;
+    }
+
+    .msg {
+        display: flex;
+    }
+
+    .active {
+        display: inline-block;
+    }
+    
+    .paused {
+        display: inline-block;
+        margin-left: 0;
+    }
+    
+    .month1, .month2, .month3 {
+        margin-top: 45px;
+    }
+    
+    .month2, .month3 {
+
+    }
+    
+    .radio--red {
+
     }
 
 #form{
