--- a/layouts/partials/account.html
+++ b/layouts/partials/account.html
@@ -119,13 +119,13 @@
 
     <div class="subOptions">
         <label class="trigger">
-            <input type="radio" name="subscription" value="active" checked="checked" class="radio radio--green active">Activate Subscription</input>
+            <input type="radio" name="subscription" value="active" checked="checked" class="radio radio--green active" ng-model="user.subscriptionStatus">Activate Subscription</input>
             <div></div>
-            </br><input type="radio" name="subscription" value="paused" checked="checked" class="radio radio--red paused">Pause Subscription</input>
+            </br><input type="radio" name="subscription" value="paused" checked="checked" class="radio radio--red paused" ng-model="user.subscriptionStatus">Pause Subscription</input>
             <span class="msg">
-                <input type="radio" name="months" value="one" class="radio radio--blue-grey month1" ><p class="pause">Pause for 1 month</p></input>
-                <input type="radio" name="months" value="two" class="radio radio--blue-grey month2" ><p class="pause">Pause for 2 months</p></input>
-                <input type="radio" name="months" value="three" class="radio radio--blue-grey month3" ><p class="pause">Pause for 3 months</p></input>
+                <input type="radio" name="months" value="one" class="radio radio--blue-grey month1" ng-model="user.subscriptionPauseMonths"><p class="pause">Pause for 1 month</p></input>
+                <input type="radio" name="months" value="two" class="radio radio--blue-grey month2" ng-model="user.subscriptionPauseMonths"><p class="pause">Pause for 2 months</p></input>
+                <input type="radio" name="months" value="three" class="radio radio--blue-grey month3" ng-model="user.subscriptionPauseMonths"><p class="pause">Pause for 3 months</p></input>
             </span>
         </label>
     </div>
