Added new subscription page
Added subscription md file in `content` folder
Added subscriontion html file in `partials` for custom code for subscription form
Added script under `static/js`
Added 3 stylesheets for sub form layout

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,6 +4,8 @@
     {{ partial "account.html" . }}
 {{ else if eq $.Params.title "Firebase App" }}
     {{ partial "signin.html" . }}
+{{ else if eq $.Params.title "Subscription" }}
+    {{ partial "subscription.html" . }}
 {{ else }}
     {{ partial "header.html" . }}
     <div class="heroD">
