--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,5 +14,11 @@
             <a href="https://www.pinterest.com/vibeltd/"><img class="pin" src={{ "/img/vpin.png" | relURL }}></a>
         </div>
     </div>
-    
+
 </div>
+
+{{ if eq $.Params.title "Subscription" }}
+<header id="header" class="info">
+    <h2 class="">Vibe Subscription Beta Group Pre-Order</h2>
+</header>
+{{ end }}
