--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,6 +13,19 @@
 	<!-- Normalize -->
 	<link rel="stylesheet" href={{ "/css/normalize.css" | relURL }} />
 
+	<!-- 
+		Stylesheets
+		Conditional Logic applied to load different CSS for Privacy Page ONLY 
+	-->
+	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacy.css" | relURL }}{{ else }}{{ "/css/cssv.css" | relURL }}{{ end }} />
+	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacyr.css" | relURL }}{{ else }}{{ "/css/cssvr.css" | relURL }}{{ end }} />
+	{{ if eq $.Params.title "Subscription" }}
+		<link rel="stylesheet" href={{ "/css/structure.css" | relURL }} />
+		<link rel="stylesheet" href={{ "/css/form.css" | relURL }} />
+		<link rel="stylesheet" href={{ "/css/theme.css" | relURL }} />
+	{{ end }}
+
+
 	<!-- JQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
@@ -187,9 +200,12 @@
 	<script src="/js/account.ctrl.js" type="text/javascript"></script>
 	<!-- End Firebase App -->
 
-	<!-- Conditional Logic applied to load different CSS for Privacy Page ONLY -->
-	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacy.css" | relURL }}{{ else }}{{ "/css/cssv.css" | relURL }}{{ end }} />
-	<link rel="stylesheet" href={{ if eq $.Params.title "PRIVACY POLICY" }}{{ "/css/privacyr.css" | relURL }}{{ else }}{{ "/css/cssvr.css" | relURL }}{{ end }} />
+	<!-- Subscription Forms -->
+	<script src="/js/wufoo.js" type="text/javascript"></script>
+	<!--[if lt IE 10]>
+	<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	<!-- End Sub Forms -->
 
 </head>
 
