Fixed radio buttons not working in sub forms

--- a/layouts/partials/subscription.html
+++ b/layouts/partials/subscription.html
@@ -38,7 +38,7 @@
             <div>
                 <input id="radioDefault_347" name="Field347" type="hidden" value="" />
                 <span>
-                <input id="Field347_0" name="Field347" type="radio" class="field radio" value="🌿☕️🍫 $59 Monthly Subscription - $10 Discount for 3 Months for Beta Member 🙏"
+                <input id="Field347_0" name="Field347" type="radio" class="field radioSub" value="🌿☕️🍫 $59 Monthly Subscription - $10 Discount for 3 Months for Beta Member 🙏"
                     tabindex="1" onchange="" checked="checked" required />
                 <label class="choice" for="Field347_0">
                     <span class="choice__text notranslate">🌿☕️🍫 $59 Monthly Subscription - $10 Discount for 3 Months for Beta Member 🙏</span>
@@ -47,7 +47,7 @@
                 </label>
                 </span>
                 <span>
-                <input id="Field347_1" name="Field347" type="radio" class="field radio" value="🌿☕️🍫 $59 Bi-Monthly Subscription (6x per Year) - $10 Discount for 3 Months for Beta Member 🙏"
+                <input id="Field347_1" name="Field347" type="radio" class="field radioSub" value="🌿☕️🍫 $59 Bi-Monthly Subscription (6x per Year) - $10 Discount for 3 Months for Beta Member 🙏"
                     tabindex="2" onchange="" required />
                 <label class="choice" for="Field347_1">
                     <span class="choice__text notranslate">🌿☕️🍫 $59 Bi-Monthly Subscription (6x per Year) - $10 Discount for 3 Months for Beta Member 🙏</span>
@@ -56,7 +56,7 @@
                 </label>
                 </span>
                 <span>
-                <input id="Field347_2" name="Field347" type="radio" class="field radio" value="☕️🍫 $35 Monthly Subscription -$5 Discount for 3 Months for Beta Member 🙏"
+                <input id="Field347_2" name="Field347" type="radio" class="field radioSub" value="☕️🍫 $35 Monthly Subscription -$5 Discount for 3 Months for Beta Member 🙏"
                     tabindex="3" onchange="" required />
                 <label class="choice" for="Field347_2">
                     <span class="choice__text notranslate">☕️🍫 $35 Monthly Subscription -$5 Discount for 3 Months for Beta Member 🙏</span>
@@ -65,7 +65,7 @@
                 </label>
                 </span>
                 <span>
-                <input id="Field347_3" name="Field347" type="radio" class="field radio" value="☕️🍫 $35 Bi-Monthly Subscription (6x per Year) -$5 Discount for 3 Months for Beta Member 🙏"
+                <input id="Field347_3" name="Field347" type="radio" class="field radioSub" value="☕️🍫 $35 Bi-Monthly Subscription (6x per Year) -$5 Discount for 3 Months for Beta Member 🙏"
                     tabindex="4" onchange="" required />
                 <label class="choice" for="Field347_3">
                     <span class="choice__text notranslate">☕️🍫 $35 Bi-Monthly Subscription (6x per Year) -$5 Discount for 3 Months for Beta Member 🙏</span>
@@ -105,7 +105,7 @@
             <div>
                 <input id="radioDefault_123" name="Field123" type="hidden" value="" />
                 <span>
-                <input id="Field123_0" name="Field123" type="radio" class="field radio" value="Regular" tabindex="5" onchange="" checked="checked"
+                <input id="Field123_0" name="Field123" type="radio" class="field radioSub" value="Regular" tabindex="5" onchange="" checked="checked"
                     required />
                 <label class="choice" for="Field123_0">
                     <span class="choice__text notranslate">Regular</span>
@@ -114,7 +114,7 @@
                 </label>
                 </span>
                 <span>
-                <input id="Field123_1" name="Field123" type="radio" class="field radio" value="Decaf" tabindex="6" onchange="" required />
+                <input id="Field123_1" name="Field123" type="radio" class="field radioSub" value="Decaf" tabindex="6" onchange="" required />
                 <label class="choice" for="Field123_1">
                     <span class="choice__text notranslate">Decaf</span>
                     <span class="choice__qty">
@@ -141,7 +141,7 @@
             <div>
                 <input id="radioDefault_349" name="Field349" type="hidden" value="" />
                 <span>
-                <input id="Field349_0" name="Field349" type="radio" class="field radio" value="Dark Chocolate Only" tabindex="7" onchange=""
+                <input id="Field349_0" name="Field349" type="radio" class="field radioSub" value="Dark Chocolate Only" tabindex="7" onchange=""
                     checked="checked" required />
                 <label class="choice" for="Field349_0">
                     <span class="choice__text notranslate">Dark Chocolate Only</span>
@@ -150,7 +150,7 @@
                 </label>
                 </span>
                 <span>
-                <input id="Field349_1" name="Field349" type="radio" class="field radio" value="Mostly Dark with Occasional Milk" tabindex="8"
+                <input id="Field349_1" name="Field349" type="radio" class="field radioSub" value="Mostly Dark with Occasional Milk" tabindex="8"
                     onchange="" required />
                 <label class="choice" for="Field349_1">
                     <span class="choice__text notranslate">Mostly Dark with Occasional Milk</span>
